--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -110,11 +110,29 @@
         }
     }
 
-    main {
-        padding: 20px;
+    main#home {
+        padding: 3rem 3rem 5rem 3rem;
 
         h1 {
-            margin-top: 15vh;
+            margin: 15vh -2rem 3vh -2rem;
+        }
+    }
+
+    main {
+        padding: 3rem 3rem 5rem 3rem;
+
+        h1 {
+            margin: 5vh -2rem 3vh -2rem;
+        }
+    }
+
+    .about-info {
+        
+        .bio {
+
+            ol {
+                margin-left: -0.8rem;
+            }
         }
     }
 
