--- a/scss/main-blue.scss
+++ b/scss/main-blue.scss
@@ -62,7 +62,7 @@ header {
 }
 
 main {
-    padding: 4rem;
+    padding: 4rem 4rem 5rem 4rem;
 
     .icons {
         margin-top: 1rem; 
