--- a/scss/main-light.scss
+++ b/scss/main-light.scss
@@ -63,7 +63,7 @@ header {
 }
 
 main {
-    padding: 4rem;
+    padding: 4rem 4rem 5rem 4rem;
 
     .icons {
         margin-top: 1rem; 
